--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 <%= render 'layouts/navbar' %>
 
 <div class="container-fluid">
+  <p class="alert"><%= alert %></p>
 	<%= yield %>
 	<%= render 'layouts/footer' %>
 </div>
