--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to YelpDemo!</h1>
-<h2>This is one of the sample applications for <%= link_to("BaseRails", "http://www.baserails.com") %>, a platform that teaches people to build custom websites with the Ruby on Rails programming language.</h2>
+<h2>This is one of the sample applications for <%= link_to "BaseRails", "http://www.baserails.com" %>, a platform that teaches people to build custom websites with the Ruby on Rails programming language.</h2>
 <h3>Sign up and start saving today!</h3>
