tweaked the restaurant show page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,9 +17,10 @@
 
 <p>
   <strong>Website:</strong>
-  <%= @restaurant.website %>
+  <%= link_to "#{@restaurant.website}", @restaurant.website, class: "btn btn-link" %>
 </p>
 
-<%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+<%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-default" %>
+<br><br>
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
