--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,26 +1,41 @@
-<%= image_tag @restaurant.image_url %>
+<div class="row">
+	<div class="col-md-3">
 
-<p>
-  <strong>Name:</strong>
-  <%= @restaurant.name %>
-</p>
+		<%= image_tag @restaurant.image_url %>
+		<h2>
+		  <%= @restaurant.name %>
+		</h2>
 
-<p>
-  <strong>Address:</strong>
-  <%= @restaurant.address %>
-</p>
+		<p>
+		  <strong>Address:</strong>
+		  <%= @restaurant.address %>
+		</p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @restaurant.phone %>
-</p>
+		<p>
+		  <strong>Phone:</strong>
+		  <%= @restaurant.phone %>
+		</p>
 
-<p>
-  <strong>Website:</strong>
-  <%= link_to "#{@restaurant.website}", @restaurant.website, class: "btn btn-link" %>
-</p>
+		<p>
+		  <strong>Website:</strong>
+		  <%= link_to @restaurant.website, @restaurant.website %>
+		</p>
 
-<%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-default" %>
-<br><br>
+		<%= link_to "Write Review", new_restaurant_review_path(@restaurant), class: "btn btn-default" %>
+	</div>
+	<div class="col-md-9">
+		<% if @reviews.blank? %>
+			<h4>No reviews yet. Be the first to <%= link_to "write one", new_restaurant_review_path(@restaurant) %>!</h4>
+		<% else %>
+			<% @reviews.each do |review| %>
+				<p><%= review.rating %> </p>
+				<p><%= review.comment %> </p>
+			<% end %>
+		<% end %>
+		
+	</div>
+</div>
+
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
+
