Add star ratings with raty

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -28,7 +28,7 @@
 			<h4>No reviews yet. Be the first to <%= link_to "write one", new_restaurant_review_path(@restaurant) %>!</h4>
 		<% else %>
 			<% @reviews.each do |review| %>
-				<p><%= review.rating %> </p>
+				<div class="star-rating" data-score= <%= review.rating %> ></div>
 				<p><%= review.comment %> </p>
 			<% end %>
 		<% end %>
@@ -38,4 +38,14 @@
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
+
+<script>
+	$('.star-rating').raty({ path: 'https://s3.amazonaws.com/yelpdemo-wilkerson/stars',
+		readOnly: true,
+		score: function() {
+		return $(this).attr('data-score');
+		}
+	});
+
+</script>
 
