--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,7 +5,8 @@
 		<h2>
 		  <%= @restaurant.name %>
 		</h2>
-
+		<div class="star-rating" data-score= <%= @avg_rating %> ></div>
+		<p><%= "#{@reviews.length} reviews" %></p>
 		<p>
 		  <strong>Address:</strong>
 		  <%= @restaurant.address %>
@@ -27,10 +28,18 @@
 		<% if @reviews.blank? %>
 			<h4>No reviews yet. Be the first to <%= link_to "write one", new_restaurant_review_path(@restaurant) %>!</h4>
 		<% else %>
-			<% @reviews.each do |review| %>
-				<div class="star-rating" data-score= <%= review.rating %> ></div>
-				<p><%= review.comment %> </p>
-			<% end %>
+			<table class="table">
+				<tbody>
+					<% @reviews.each do |review| %>
+						<tr>
+							<td>
+								<div class="star-rating" data-score= <%= review.rating %> ></div>
+								<p><%= h(review.comment).gsub(/\n/, '<br/>').html_safe %> </p>
+							</td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
 		<% end %>
 		
 	</div>
